# BYOS

./: .gitignore  README.md  pyproject.toml
files/docker/: override.conf
inventory/: inventory.yml
inventory/group_vars/: all.yml  ubuntu.yml  windows.yml
playbooks/: main.yml  main_playbook.yml  ubuntu_baseline.yml  ubuntu_docker.yml  windows_baseline.yml
roles/certificate_authority/tasks/: certificate_authority.yml  client_certificate.yml  docker_server_certificate.yml  main.yml
roles/certificate_authority/vars/: vars.yml
roles/common/tasks/: debian.yml  main.yml  windows.yml
roles/docker/tasks/: main.yml  restart_docker.yml
roles/domain_controller/tasks/: main.yml
